<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/default_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/then"
            style="@style/DefaultTextStyle"
            android:layout_marginTop="@dimen/margin_top" />

        <TextView
            android:id="@+id/opt_cats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/options_background"
            android:text="@string/second_frag_first_option"
            style="@style/DefaultTextStyle"
            android:layout_marginTop="@dimen/margin_top"
            android:padding="8dp" />

        <TextView
            android:id="@+id/opt_accepted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/options_background"
            android:text="@string/second_frag_second_option"
            style="@style/DefaultTextStyle"
            android:layout_marginTop="@dimen/margin_top"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/generic_comment_box"
            style="@style/DefaultTextStyle" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/lottie_size"
            android:layout_height="@dimen/lottie_size"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            app:lottie_fileName="dog.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/people_nominate"
            style="@style/DefaultTextStyle"
            android:layout_marginTop="@dimen/margin_top" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/options_background"
            android:text="@string/second_frag_2a"
            style="@style/DefaultTextStyle"
            android:layout_marginTop="@dimen/margin_top"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/options_background"
            android:text="@string/second_frag_2b"
            style="@style/DefaultTextStyle"
            android:layout_marginTop="@dimen/margin_top"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/generic_comment_box"
            style="@style/DefaultTextStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/now"
            style="@style/DefaultTextStyle"
            android:layout_marginTop="@dimen/margin_top" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/options_background"
            android:text="@string/second_frag_3a"
            style="@style/DefaultTextStyle"
            android:layout_marginTop="@dimen/margin_top"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/options_background"
            android:text="@string/second_frag_3b"
            style="@style/DefaultTextStyle"
            android:layout_marginTop="@dimen/margin_top"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/generic_comment_box"
            style="@style/DefaultTextStyle" />

    </LinearLayout>

</ViewFlipper>

