<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.srishti.telltale.StoryViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragments.ThirdFragment"
        android:layout_margin="@dimen/default_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            style="@style/DefaultTextStyle"
            android:layout_marginTop="@dimen/margin_top" />

        <TextView
            android:id="@+id/opt_break"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/options_background"
            android:text="@string/third_frag_first_option"
            style="@style/DefaultTextStyle"
            android:layout_marginTop="@dimen/margin_top"
            android:padding="8dp" />

        <TextView
            android:id="@+id/opt_cure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/options_background"
            android:text="@string/third_frag_second_option"
            style="@style/DefaultTextStyle"
            android:layout_marginTop="@dimen/margin_top"
            android:padding="8dp" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            style="@style/DefaultTextStyle" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_cat"
            android:layout_width="@dimen/lottie_size"
            android:layout_height="@dimen/lottie_size"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            app:lottie_fileName="cat.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_full_story"
            android:background="@color/colorAccent"
            android:layout_marginTop="@dimen/margin_top"
            android:visibility="gone" />

    </LinearLayout>
</layout>